feat(user): new handler read user by email
