# internal/app/admin/user/handler/v1/user/user.go
@@ -2,7 +2,7 @@ package user
 
 import (
 	enterpriseRepo "basic-crud-go/internal/app/admin/enterprise/repository"
-	entepriseService "basic-crud-go/internal/app/admin/enterprise/service"
+	enterpriseService "basic-crud-go/internal/app/admin/enterprise/service"
 	controller "basic-crud-go/internal/app/admin/user/controller"
 	repository "basic-crud-go/internal/app/admin/user/repository"
 	service "basic-crud-go/internal/app/admin/user/service"
@@ -13,21 +13,21 @@ import (
 
 func RegisterUserRoutes(router *gin.RouterGroup) {
 	db := postgres.GetDB()
-	// Repository Service
-	repoEnterprise := enterpriseRepo.NewRepositoryImpl(db)
-	// Service Enterprise
-	entService := entepriseService.NewEnterpriseService(repoEnterprise)
-	//Repository
-	repo := repository.NewUserRepositoryImpl(db)
-	//Service
-	svc := service.NewUserService(repo, entService)
-	//Conteroller
-	ctrl := controller.NewUserController(svc)
 
-	group := router.Group("/")
+	// Enterprise layer
+	entRepo := enterpriseRepo.NewRepositoryImpl(db)
+	entSvc := enterpriseService.NewEnterpriseService(entRepo)
+
+	// User layer
+	userRepo := repository.NewUserRepositoryImpl(db)
+	userSvc := service.NewUserService(userRepo, entSvc)
+	userCtrl := controller.NewUserController(userSvc)
+
+	// Routes
+	userGroup := router.Group("/")
 	{
-		group.GET("/ping", ctrl.Ping)
-		group.POST("", ctrl.CreateUserHandler)
+		userGroup.GET("/ping", userCtrl.Ping)
+		userGroup.POST("", userCtrl.CreateUserHandler)
+		userGroup.GET("/:email", userCtrl.ReadUserHandler)
 	}
-
 }
